# safe-kd

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
configs/datasets/: aircraft.yaml  cifar10.yaml  cifar100.yaml  cifar10c.yaml  flowers102.yaml  pets.yaml  stl10.yaml  toy2d.yaml
configs/methods/: dkd.yaml  erm.yaml  kd.yaml  multiexit.yaml  safe_kd.yaml
configs/models/: convnext_t.yaml  effb0.yaml  mnv3s.yaml  rn50.yaml  swin_t.yaml  vit_s.yaml
configs/sweeps/: full_benchmark.yaml  key_subset.yaml  supplementary.yaml  toy2d_sota.yaml
scripts/: collect_results.py  make_highlight.py  reproduce.py  run.py  run_all.py  run_by_dataset.sh  sweep.py  toy2d_sota.py  tune_safe_kd_toy2d.py
src/eval/: early_exit.py  figures.py  metrics.py  robustness.py  tables.py
src/methods/: calibration.py  dkd.py  kd.py  losses.py  safe_exit.py  training_objectives.py
src/models/: exits.py  factory.py  flops.py
src/train/: ema.py  engine.py  logger.py  optim.py  seed.py
src/utils/: env.py  io.py
