[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-kd"
version = "0.1.0"
description = "SAFE-KD: Risk-Controlled Early-Exit Distillation for Vision Backbones"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "SAFE-KD Authors"}]
keywords = ["early-exit", "knowledge-distillation", "conformal", "vision"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]

dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "timm>=0.9.12",
  "omegaconf>=2.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "tqdm>=4.66",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
